# src/controllers/task.controller.ts
@@ -2,8 +2,8 @@ import { TaskModel, Task } from '../database/dbobjects';
 import { Controller, Route, Get, Post, Body, Put, Delete, Path, Query } from 'tsoa';
 import { resolve } from 'dns';
 
-export type TaskCreationRequest = Pick<Task,   "taskName" | "dueDate" | "completionStatus">;
-export type TaskUpdateRequest = Pick<Task,   "taskName" | "dueDate" | "completionStatus">;
+export type TaskCreationRequest = Pick<Task,   "taskName" | "userId" | "dueDate" | "priority" | "completionStatus">;
+export type TaskUpdateRequest = Pick<Task,   "taskName" | "userId" | "dueDate" | "priority" | "completionStatus">;
 
 @Route('/task')
 export class TaskController extends Controller {
@@ -14,8 +14,10 @@ export class TaskController extends Controller {
                let itemsFound: any = await TaskModel.find({});
                let items: Task[] = itemsFound.map((item : any) => { 
                    return {
-                    taskName: item.taskName, 
+                    taskName: item.taskName,
+                    userId: item.userId,
                     dueDate: item.dueDate, 
+                    priority: item.priority,
                     completionStatus: item.completionStatus}
                     });
                resolve(items);
@@ -26,19 +28,66 @@ export class TaskController extends Controller {
         });
     }
 
+    @Get('/getOnDate/{userId}')
+    public async getOnDate(@Query() dueDate: Date, @Query() userId: string): Promise<Task[]> {
+        return new Promise<Task[]> ( async (resolve, reject) => { 
+            try {
+                console.log(`circal-api: getOnDate called ${dueDate}`);
+                let itemsFound: any = await (await await(TaskModel.find({'userId': userId, 'dueDate': dueDate})));
+                let items = itemsFound.map((item: any) => {
+                    return {
+                        taskName: item.taskName, 
+                        userId: item.userId,
+                        dueDate: item.dueDate, 
+                        priority: item.priority,
+                        completionStatus: item.completionStatus
+                    }                    
+                })
+                resolve(items);
+            } catch(err) {
+                this.setStatus(500);
+                console.error('Caught error', err);
+                reject(err);
+            }
+        })
+    }
 
-    // TODO: make function work so that we can get tasks based on userId
-    // tasks returned should only be for given user
-    @Get('/get/{completionStatus}')
-    public async getByStatus(@Query() completionStatus: string): Promise<Task[]> {
+    @Get('/getPriority/{userId}')
+    public async getByPriority(@Query() userId: string, @Query() priority: string): Promise<Task[]> {
         return new Promise<Task[]> ( async (resolve, reject) => {
             try {
-                console.log(`circal-api: getByStatus called ${completionStatus}`);
-                let itemsFound: any = await (await (await TaskModel.find().where('completionStatus').equals(completionStatus)));
+                console.log(`circal-api: getByPriority called ${priority}`);
+                let itemsFound: any = await (await await (TaskModel.find({'userId': userId, 'priority': priority})));
                 let items = itemsFound.map((item: any) => { 
                     return {
                         taskName: item.taskName, 
+                        userId: item.userId,
                         dueDate: item.dueDate, 
+                        priority: item.priority,
+                        completionStatus: item.completionStatus}
+                    });
+                resolve(items);
+            } catch (err) {
+                this.setStatus(500);
+                console.error('Caught error', err);
+                reject(err);
+            }
+        });
+    }
+
+
+    @Get('/getStatus/{userId}')
+    public async getByStatus(@Query() completionStatus: string, @Query() userId: string): Promise<Task[]> {
+        return new Promise<Task[]> ( async (resolve, reject) => {
+            try {
+                console.log(`circal-api: getByStatus called ${completionStatus}`);
+                let itemsFound: any = await (await await (TaskModel.find({'userId': userId, 'completionStatus': completionStatus})));
+                let items = itemsFound.map((item: any) => { 
+                    return {
+                        taskName: item.taskName, 
+                        userId: item.userId,
+                        dueDate: item.dueDate, 
+                        priority: item.priority,
                         completionStatus: item.completionStatus}
                     });
                     resolve(items);
@@ -55,17 +104,20 @@ export class TaskController extends Controller {
 		return new Promise<Task> ( async (resolve, reject) => {
 			const item = new TaskModel(createRequest);
 			//another way to save and check for errors while saving
-			await item.save(undefined, (err: any, item: any) => {
-				if (item) {
+			item.save(undefined, (err: any, item: any) => {
+                if (item) {
                     let savedItem: any = {
-                        taskName: item.taskName, 
-                        dueDate: item.dueDate, 
-                        completionStatus: item.completionStatus};
-					resolve(savedItem);
-				} else {
-					reject({});
-				}
-		    });  
+                        taskName: item.taskName,
+                        userId: item.userId,
+                        dueDate: item.dueDate,
+                        priority: item.priority,
+                        completionStatus: item.completionStatus
+                    };
+                    resolve(savedItem);
+                } else {
+                    reject({});
+                }
+            });  
 		});
 	}
 
@@ -85,6 +137,4 @@ export class TaskController extends Controller {
         });
     }
 
-    // TODO:
-    // Get Functions: getByStatus, getByDueDate, getByName (is this necessary?)
 }
